[WK2] Set WebKitTestRunner's WebProcess cache model to DocumentBrowser. https://bugs.webkit.org/show_bug.cgi?id=81945

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2012-04-14
Reviewed by Dan Bernstein.

Tools:

WebProcess's default cache model is DocumentViewer. When DocumentViewer model is on,
the PageCache's capacity is set to 0. Tests that are enabling 'WebKitUsesPageCachePreferenceKey' expect
PageCache to be functional.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

LayoutTests:

Re-enable 2 tests where WebKitUsesPageCachePreferenceKey is set.

* platform/mac-wk2/Skipped:

Canonical link: https://commits.webkit.org/101482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114206 268f45cc-cd09-0410-ab3c-d52691b4dbfc